# chip

./: pyproject.toml
chip/: logger.py
chip/adapters/openai/: chatbot.py
chip/core/: chat.py  chatbot.py  history.py  message.py  state.py  task.py  tool.py
example/: example.py
