[project]
name = "Chip"
version = "0.1.0"
description = "A stateful chatbot framework that supports function calling."
readme = "README.md"
license = {file = "LICENSE.txt"}
maintainers = [{name = "Davide Nale", email = "davide.nale.99@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
dotenv = ["python-dotenv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
fix = true
show-fixes = true
line-length = 88
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true
